styles/index.css
@tailwind base;

/* Write your own custom base styles here */

/* Start purging... */
@tailwind components;
/* Stop purging. */

/* Write you own custom component styles here */

/* Start purging... */
@tailwind utilities;
/* Stop purging. */

/* Imports */

@font-face {
  font-family: Gotu;
  src: local(""), url(/fonts/Gotu-Regular.woff2) format("woff2");
}

@font-face {
  font-family: QuicksandRegular;
  src: local(""), url(/fonts/Quicksand-Regular.woff2) format("woff2");
}

/* Your own custom utilities */

.has-text-align-left {
  @apply text-left;
}

.has-text-align-center {
  @apply text-center;
}

.has-text-align-right {
  @apply text-right;
}

.has-large-font-size {
  @apply text-4xl;
}

.alignfull {
  @apply w-screen relative;

  left: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  max-width: 100vw;
  right: 50%;
}

.wp-block-image img {
  @apply max-w-full mt-2;
}
.wp-block-image.aligncenter {
  @apply text-center;
}
.wp-block-image.alignfull img,
.wp-block-image.alignwide img {
  @apply w-full;
}
.wp-block-image .alignleft,
.wp-block-image .alignright,
.wp-block-image .aligncenter,
.wp-block-image.is-resized {
  @apply table ml-0 mr-0;
}
.wp-block-image .alignleft > figcaption,
.wp-block-image .alignright > figcaption,
.wp-block-image .aligncenter > figcaption,
.wp-block-image.is-resized > figcaption {
  @apply table-caption;

  caption-side: bottom;
}

.wp-block-image .alignleft {
  @apply float-left mr-4;
}
.wp-block-image .alignright {
  @apply float-right ml-4;
}
.wp-block-image .aligncenter {
  @apply m-auto;
}

.wp-block-button a,
.wp-block-file a.wp-block-file__button {
  @apply bg-blue-500 text-white no-underline py-2 px-4;
}

.wp-block-button a:hover,
.wp-block-file a.wp-block-file__button:hover {
  @apply bg-blue-400 cursor-pointer;
}

.wp-block-file a:first-of-type {
  @apply mr-4;
}

.wp-block-cover {
  @apply flex flex-wrap justify-center items-center bg-cover bg-center overflow-hidden;

  min-height: 430px;
}

.wp-block-verse {
  @apply font-sans;
}

.wp-block-media-text {
  @apply grid grid-cols-2 gap-4;
}

.wp-block-embed {
  aspect-ratio: 16/9;
  padding: 0.5rem;
}


.wp-block-embed__wrapper, .wp-block-embed__wrapper iframe {
  width: 100%;
  height: 100%;
}

.wp-block-gallery {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  grid-auto-rows: 200px;
  grid-auto-flow: dense;
}

.wp-block-gallery .tall {
  grid-row: span 2;

}

.wp-block-gallery .wide {
  grid-column: span 2;

}

.wp-block-gallery .big {
  grid-row: span 2;
  grid-column: span 2;

}


.wp-block-gallery > figure > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.wp-block-gallery figure {
  display: flex;
  justify-content: center;
  align-items: center;

}

.wp-block-gallery img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  display: inline-block;
  
}


/* Icon Specific Styles */ 

.social-link {
  margin: 5px 10px;
}

.social-link svg {
  height: 40px;
  width: 40px;
  fill: white;
  }

/* Navigation Specific Styles */

.nav-fixed {
  top: 5px;
  -webkit-transition: padding 0.5s ease;
  transition: padding 0.5s ease;
  border-radius: 12px;
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  z-index: 1000;
  width: calc(100% - 10px);
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  
}

/* Post Preview Specific Styles */ 

.post-excerpt p {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.post-excerpt p a {
  border-radius: 12px;
  background: rgba(23,105,75, .75);
  padding: 2px 10px;
  text-align: center;
  margin: 0.5rem 0.2rem;
  color: white;
  font-weight: bold;
}


/* Footer Specific Styles */

.footer-container {
    padding-bottom: 5px;

    
}

.footer-container p {
  width: 100%;
  padding: 0px 0px 20px 0px;
  margin: 0px;
  text-align: center;
  font-size: 0.825em;
}

.container-card {
  border-radius: 12px;
  margin: 0px 5px 5px 5px;

}

.social-container {
  display: flex;
  flex-direction: row;
  max-width: 300px;
  border-radius: 12px;
  margin: 0px 5px 5px 5px;
  justify-content: center;
  padding: 5px 0px;
  margin-left: auto;
  margin-right: auto;
}

.grid-container {
    padding: 48px 24px;
    margin-left: 5px;
    margin-right: 5px;
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 32px;
    width: calc(100% - 58px);
    justify-items: center;
}

@media only screen and (min-width: 680px) {
  .grid-container {
  grid-template-columns: 1fr 1fr;
  }
}


.grid-item ul {
  list-style: none;
  padding-left: 5px;
  line-height: 2em;
}

.grid-item li {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.grid-item .svg-icon {
  width: 40px;
  height: auto;
}

/* Post styles */

.post-body_content__ye_eq > * {
  max-width: 48rem;
  margin-right: auto;
  margin-left: auto;
}

.post-body_content__ye_eq .alignwide {
  max-width: 60rem;
}

.post-body_content__ye_eq .alignfull {
  max-width: 100%;
  margin-right: 0;
  margin-left: 0;
}

